--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Unsplash</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+	<div class="container">
+    	<h1>Unsplash Photographer Spotlight</h1>
+			<p>Welcome to my Unsplash Photographer Spotlight. Below are six photographers that have inspired me with their work. With this website, I aim to showcase beautiful photography from around the world.</p>
+	</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
