Updated Home Page

--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
 	<!-- InstanceBeginEditable name="master-content" -->
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1511330279238-e4985b784af3?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Marion Michelle">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <h5 class="card-title">Marion Michelle</h5>
+      <p class="card-text">Photographer + Copywriter.</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1542898603582-636820c4e3e8?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Maddi Bazzocco">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Maddi Bazzocco</h5>
+      <p class="card-text">Whole foods. Self love. Active lifestyle. Camera in one hand, coffee in the other.</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1451435888837-4755067c2a33?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Tom Sodoge">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title">Tom Sodoge</h5>
+      <p class="card-text">Photographer and designer from the heart of Germany.</p>
     </div>
   </div>
 </div>
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1542598327357-0236ff086caf?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Brooke Cagle">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <h5 class="card-title">Brooke Cagle</h5>
+      <p class="card-text">Designer/Photographer + Avid Dreamer + World Traveler.</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1540252301988-030fd9b8036f?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Ben Klea">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Ben Klea</h5>
+      <p class="card-text">Love to see the world with my family!</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1540929979662-33f8e7e744bc?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Kelly Sikkema">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title">Kelly Sikkema</h5>
+      <p class="card-text">Saved by grace + UX Design Manager + Hobby Photographer + Hand Letterer.</p>
     </div>
   </div>
 </div>
