Added a Footer to Template

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   </div>
 </div>
 	<!-- InstanceEndEditable -->
+	<p>[Footer.]</p>
 	</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
