Added Photo Gallery Link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="card-body">
       <h5 class="card-title">Marion Michelle</h5>
       <p class="card-text">Photographer + Copywriter.</p>
+	  <a href="#">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
@@ -31,6 +32,7 @@
     <div class="card-body">
       <h5 class="card-title">Maddi Bazzocco</h5>
       <p class="card-text">Whole foods. Self love. Active lifestyle. Camera in one hand, coffee in the other.</p>
+	  <a href="#">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
@@ -38,6 +40,7 @@
     <div class="card-body">
       <h5 class="card-title">Tom Sodoge</h5>
       <p class="card-text">Photographer and designer from the heart of Germany.</p>
+	  <a href="#">Photo Gallery</a>
     </div>
   </div>
 </div>
@@ -47,6 +50,7 @@
     <div class="card-body">
       <h5 class="card-title">Brooke Cagle</h5>
       <p class="card-text">Designer/Photographer + Avid Dreamer + World Traveler.</p>
+	  <a href="#">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
@@ -54,6 +58,7 @@
     <div class="card-body">
       <h5 class="card-title">Ben Klea</h5>
       <p class="card-text">Love to see the world with my family!</p>
+	  <a href="#">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
@@ -61,6 +66,7 @@
     <div class="card-body">
       <h5 class="card-title">Kelly Sikkema</h5>
       <p class="card-text">Saved by grace + UX Design Manager + Hobby Photographer + Hand Letterer.</p>
+	  <a href="#">Photo Gallery</a>
     </div>
   </div>
 </div>
