--- a/marion-michelle/index.html
+++ b/marion-michelle/index.html
@@ -1,48 +1,10 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html>
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Unsplash</title>
-<!-- InstanceEndEditable -->
-    <!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<meta charset="UTF-8">
+<title>Untitled Document</title>
 </head>
-  <body>
-	<div class="container">
-    	<h1>Unsplash Photographer Spotlight</h1>
-			<p>Welcome to my Unsplash Photographer Spotlight. Below are six photographers that have inspired me with their work. With this website, I aim to showcase beautiful photography from around the world.</p>
-	<!-- InstanceBeginEditable name="master-content" -->
-  <div class="row">
-    <div class="col-12 col-sm-6 col-md-3 col-lg-9">
-      <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/profile-1511330279238-e4985b784af3?auto=format&fit=crop&w=400&h=400&q=60&crop=faces" alt="Marion Michelle">
-        <div class="card-body">
-          <h4 class="card-title">Marion Michelle</h4>
-          <p class="card-text">Photographer + Copywriter.</p>
-        </div>
-        <ul class="list-group">
-          <li class="list-group-item"><a href="http://marionmichele.com" target="_blank">Website</a></li>
-          <li class="list-group-item"><a href="http://instagram.com/marionmichele" target="_blank">Instagram</a></li>
-          <li class="list-group-item"><a href="https://twitter.com/marion_michele" target="_blank">Twitter</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-9 col-lg-3">
-      <p>[Placeholder content.]</p>
-    </div>
-  </div>
-  <!-- InstanceEndEditable -->
-	<p>[Footer.]</p>
-	</div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
-<!-- InstanceEnd --></html>
+
+<body>
+</body>
+</html>
