Added Breadcrumb Trail

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="card-body">
       <h5 class="card-title">Marion Michelle</h5>
       <p class="card-text">Photographer + Copywriter.</p>
-	  <a href="#">Photo Gallery</a>
+	  <a href="marion-michelle/index.html">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
