--- a/marion-michelle/photographs/hd-photo.html
+++ b/marion-michelle/photographs/hd-photo.html
@@ -22,10 +22,11 @@
 	
 <nav>
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-    <li class="breadcrumb-item active">Marion Michelle</li>
-  <!-- InstanceEndEditable -->
+    <li class="breadcrumb-item"><a href="../index.html">Marion Michelle</a></li>
+    <li class="breadcrumb-item active">HD photo</li>
+    <!-- InstanceEndEditable -->
   </ol>
 </nav>
   <div class="row">
@@ -44,37 +45,11 @@
     </div>
     <div class="col-12 col-sm-6 col-md-9 col-lg-3">
 	<!-- InstanceBeginEditable name="marion-michelle-content" -->
-    <div class="card-columns">
-		<div class="card"> <a href="photographs/hd-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=500&q=60" alt="HD photo"></a>
-  		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1543340666-a7d77fa7c60e?auto=format&w=500&q=60" alt="HD photo">
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1540145729190-f17f7abe74e6?auto=format&w=500&q=60" alt="Car, sunflare, tree and blue sky">
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1539578903083-0d9bb0ed39d4?auto=format&w=500&q=60" alt="Ocean, adventure, sunset and wave">
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1537989660536-886ea4e55cdd?auto=format&w=500&q=60" alt="Wine over Water">
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1537505099096-0dd319b285de?auto=format&w=500&q=60" alt="Cat Eye - Half Leopard, Half Cat">
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1530832963845-cd3dcb1c801d?auto=format&w=500&q=60" alt="Sunglass, summer, relaxing and drink">
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1530832805884-45f17d57a3d8?auto=format&w=500&q=60" alt="Pastel Hearts">
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1517285976756-6447388e64f9?auto=format&w=500&q=60" alt="My Girls">
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1510507450177-e7ee5f2a2c48?auto=format&w=500&q=60" alt="Working From Home">
-		</div>
-	</div>
+    <h2>HD photo</h2>
+		<p>I love the colors included in this photo. The glass-like sand is equally gorgeous as the sun reflects off of it.</p>
+	<div class="card">
+    	<img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=1200&q=60" alt="HD photo">
+  	</div>
     <!-- InstanceEndEditable --></div>
   </div>
   
