Added a Modal Window

--- a/marion-michelle/photographs/hd-photo.html
+++ b/marion-michelle/photographs/hd-photo.html
@@ -45,11 +45,35 @@
     </div>
     <div class="col-12 col-sm-6 col-md-9 col-lg-3">
 	<!-- InstanceBeginEditable name="marion-michelle-content" -->
-    <h2>HD photo</h2>
-		<p>I love the colors included in this photo. The glass-like sand is equally gorgeous as the sun reflects off of it.</p>
-	<div class="card">
-    	<img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=1200&q=60" alt="HD photo">
-  	</div>
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Photo Info
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">HD photo</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        [Placeholder for modal stats.]
+      </div> 
+      <div class="modal-footer">
+		<a href="https://unsplash.com/photos/H1qHOTB6FjQ" target="_blank">Photo Source</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>		
+<h2>HD photo</h2>
+	<p>I love the colors included in this photo. The glass-like sand is equally gorgeous as the sun reflects off of it.</p>
+<div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=1200&q=60" alt="HD photo">
+</div>
     <!-- InstanceEndEditable --></div>
   </div>
   
