--- a/marion-michelle/index.html
+++ b/marion-michelle/index.html
@@ -29,10 +29,10 @@
   </ol>
 </nav>
   <div class="row">
-    <div class="col-12 col-sm-6 col-md-3 col-lg-9">
+    <div class="col-12 col-sm-6 col-md-3">
       <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/profile-1511330279238-e4985b784af3?auto=format&fit=crop&w=400&h=400&q=60&crop=faces" alt="Marion Michelle">
         <div class="card-body">
-          <h4 class="card-title">Marion Michelle</h4>
+          <h2 class="card-title">Marion Michelle</h2>
           <p class="card-text">Photographer + Copywriter.</p>
         </div>
         <ul class="list-group">
@@ -42,7 +42,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-9 col-lg-3">
+    <div class="col-12 col-sm-6 col-md-9">
 	<!-- InstanceBeginEditable name="marion-michelle-content" -->
     <div class="card-columns">
 		<div class="card"> <a href="photographs/hd-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=500&q=60" alt="HD photo"></a>
