--- a/marion-michelle/photographs/hd-photo.html
+++ b/marion-michelle/photographs/hd-photo.html
@@ -30,10 +30,10 @@
   </ol>
 </nav>
   <div class="row">
-    <div class="col-12 col-sm-6 col-md-3 col-lg-9">
+    <div class="col-12 col-sm-6 col-md-3">
       <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/profile-1511330279238-e4985b784af3?auto=format&fit=crop&w=400&h=400&q=60&crop=faces" alt="Marion Michelle">
         <div class="card-body">
-          <h4 class="card-title">Marion Michelle</h4>
+          <h2 class="card-title">Marion Michelle</h2>
           <p class="card-text">Photographer + Copywriter.</p>
         </div>
         <ul class="list-group">
@@ -43,7 +43,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-12 col-sm-6 col-md-9 col-lg-3">
+    <div class="col-12 col-sm-6 col-md-9">
 	<!-- InstanceBeginEditable name="marion-michelle-content" -->
     <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -51,7 +51,7 @@
 </button>
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">HD photo</h5>
@@ -59,8 +59,62 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+		 <p>Published on November 27, 2018</p>
       <div class="modal-body">
-        [Placeholder for modal stats.]
+		<div class="row">
+		  <div class="col-12 col-sm-3">
+			<div class="card">
+    			<img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=1200&q=60" alt="HD photo">
+			</div>
+		  </div>
+		  <div class="col-12 col-sm-9">
+			<div class="row">
+		  	<dl class="col-4">
+				<dt>Views</dt>
+				<dd><strong>78,295</strong></dd>
+				<dd>+63,964 since last month</dd>
+		  	</dl>
+		  	<dl class="col-4">
+				<dt>Downloads</dt>
+				<dd><strong>403</strong></dd>
+				<dd>+248 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Likes</dt>
+				<dd><strong>29</strong></dd>
+				<dd>+21 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Make</dt>
+				<dd>Google</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Model</dt>
+				<dd>Pixel 3</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Focal Length</dt>
+				<dd>4.4mm</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Aperture</dt>
+				<dd>ƒ/1.8</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Shutter Speed</dt>
+				<dd>1/1500s</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>ISO</dt>
+				<dd>57</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Dimensions</dt>
+				<dd>2907 × 3876</dd>
+		  	</dl>
+			</div>
+		  </div>
+		</div>
       </div> 
       <div class="modal-footer">
 		<a href="https://unsplash.com/photos/H1qHOTB6FjQ" target="_blank">Photo Source</a>
