--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
   <body>
 	<div class="container">
     	<h1>Unsplash Photographer Spotlight</h1>
-			<p>Welcome to my Unsplash Photographer Spotlight. Below are six photographers that have inspired me with their work. With this website, I aim to showcase beautiful photography from around the world.</p>
 	<!-- InstanceBeginEditable name="master-content" -->
+<div class="row">
+	<div class="col-3 col-md-2 col-lg-1">
+    <img src="images/ali-magnani.jpg" alt="Ali Magnani" class="img-fluid rounded-circle"/> 
+	</div>
+	<div class="col-9 col-md-10 col-lg-11">
+	<p>Welcome to my Unsplash Photographer Spotlight. Below are six photographers that have inspired me with their work. I've selected 10 photos from each photographer's Unsplash portfolio and presented some commentary. Click on any photographer to start.</p>
+	</div>
+</div>
 <div class="card-deck">
   <div class="card">
     <img class="card-img-top" src="https://images.unsplash.com/profile-1511330279238-e4985b784af3?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Marion Michelle">
