--- a/marion-michelle/index.html
+++ b/marion-michelle/index.html
@@ -43,6 +43,7 @@
     </div>
     <div class="col-12 col-sm-6 col-md-9">
 	<!-- InstanceBeginEditable name="marion-michelle-content" -->
+	<p>Marion Michelle was the first photographer that I used for the Unsplash Project of my Web Design class. Ever since then, she's always included as a featured photographer.</p>
     <div class="card-columns">
 		<div class="card"> <a href="photographs/hd-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=500&q=60" alt="HD photo"></a>
   		</div>
