--- a/index.html
+++ b/index.html
@@ -78,7 +78,19 @@
   </div>
 </div>
 	<!-- InstanceEndEditable -->
-	<p>[Footer.]</p>
+	<div class="row">
+		<div class="col-12 col-sm-6">
+		Made with [love] and [coffee] by Ali Magnani
+		</div>
+		<div class="col-12 col-sm-6">
+		Connect with me:
+		<a href="https://www.linkedin.com/in/aliisabella" target="_blank">LinkedIn</a>
+		<a href="https://www.instagram.com/imaliisabella/" target="_blank">Instagram</a>
+		<a href="https://github.com/alimagnani" target="_blank">GitHub</a>
+		<a href="https://twitter.com/imaliisabella" target="_blank">Twitter</a>
+		<a href="https://www.facebook.com/IMaliisabella/" target="_blank">Facebook</a>
+		</div>
+	</div>
 	</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
