Created Detail Page for Marion Michelle 2

--- a/marion-michelle/index.html
+++ b/marion-michelle/index.html
@@ -47,8 +47,7 @@
     <div class="card-columns">
 		<div class="card"> <a href="photographs/hd-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=500&q=60" alt="HD photo"></a>
   		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1543340666-a7d77fa7c60e?auto=format&w=500&q=60" alt="HD photo">
+		<div class="card"> <a href="photographs/hd-photo-2.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340666-a7d77fa7c60e?auto=format&w=500&q=60" alt="HD photo"></a>
 		</div>
 		<div class="card">
 			<img class="card-img-top" src="https://images.unsplash.com/photo-1540145729190-f17f7abe74e6?auto=format&w=500&q=60" alt="Car, sunflare, tree and blue sky">
