Created Detail Page for Marion Michelle 3 4 5

--- a/marion-michelle/index.html
+++ b/marion-michelle/index.html
@@ -49,14 +49,11 @@
   		</div>
 		<div class="card"> <a href="photographs/hd-photo-2.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340666-a7d77fa7c60e?auto=format&w=500&q=60" alt="HD photo"></a>
 		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1540145729190-f17f7abe74e6?auto=format&w=500&q=60" alt="Car, sunflare, tree and blue sky">
+		<div class="card"> <a href="photographs/car-sunflare-tree-blue-sky.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1540145729190-f17f7abe74e6?auto=format&w=500&q=60" alt="Car, sunflare, tree and blue sky"></a>
 		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1539578903083-0d9bb0ed39d4?auto=format&w=500&q=60" alt="Ocean, adventure, sunset and wave">
+		<div class="card"> <a href="photographs/ocean-adventure-sunset-wave.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539578903083-0d9bb0ed39d4?auto=format&w=500&q=60" alt="Ocean, adventure, sunset and wave"></a>
 		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1537989660536-886ea4e55cdd?auto=format&w=500&q=60" alt="Wine over Water">
+		<div class="card"> <a href="photographs/wine-over-water.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1537989660536-886ea4e55cdd?auto=format&w=500&q=60" alt="Wine over Water"></a>
 		</div>
 		<div class="card">
 			<img class="card-img-top" src="https://images.unsplash.com/photo-1537505099096-0dd319b285de?auto=format&w=500&q=60" alt="Cat Eye - Half Leopard, Half Cat">
