Created Detail Page for Marion Michelle 7 8 9

--- a/marion-michelle/photographs/pastel-hearts.html
+++ b/marion-michelle/photographs/pastel-hearts.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Unsplash - Marion Michelle</title>
+<title>Marion Michelle - Pastel Hearts</title>
 <!-- InstanceEndEditable -->
     
     <!-- InstanceBeginEditable name="head" -->
@@ -21,10 +21,11 @@
 	
 <nav>
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-    <li class="breadcrumb-item active">Marion Michelle</li>
-  <!-- InstanceEndEditable -->
+    <li class="breadcrumb-item"><a href="../index.html">Marion Michelle</a></li>
+    <li class="breadcrumb-item active">Pastel Hearts</li>
+    <!-- InstanceEndEditable -->
   </ol>
 </nav>
   <div class="row">
@@ -43,30 +44,89 @@
     </div>
     <div class="col-12 col-sm-6 col-md-9">
 	<!-- InstanceBeginEditable name="marion-michelle-content" -->
-	<p>Marion Michelle was the first photographer that I used for the Unsplash Project of my Web Design class. Ever since then, she's always included as a featured photographer.</p>
-    <div class="card-columns">
-		<div class="card"> <a href="photographs/hd-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340634-faca54bf4eff?auto=format&w=500&q=60" alt="HD photo"></a>
-  		</div>
-		<div class="card"> <a href="photographs/hd-photo-2.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340666-a7d77fa7c60e?auto=format&w=500&q=60" alt="HD photo"></a>
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Photo Info
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Pastel Hearts</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+		<p>Published on July 5, 2018</p>
+		<div class="row">
+		  <div class="col-12 col-sm-3">
+			<div class="card">
+    			<img class="card-img-top" src="https://images.unsplash.com/photo-1530832805884-45f17d57a3d8?auto=format&w=1200&q=60" alt="Pastel Hearts">
+			</div>
+		  </div>
+		  <div class="col-12 col-sm-9">
+			<div class="row">
+		  	<dl class="col-4">
+				<dt>Views</dt>
+				<dd><strong>700,197</strong></dd>
+				<dd>+204,917 since last month</dd>
+		  	</dl>
+		  	<dl class="col-4">
+				<dt>Downloads</dt>
+				<dd><strong>5,673</strong></dd>
+				<dd>+1,666 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Likes</dt>
+				<dd><strong>75</strong></dd>
+				<dd>+18 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Make</dt>
+				<dd>Canon</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Model</dt>
+				<dd>Canon EOS 6D</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Focal Length</dt>
+				<dd>35.0mm</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Aperture</dt>
+				<dd>ƒ/18.0</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Shutter Speed</dt>
+				<dd>1/160s</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>ISO</dt>
+				<dd>100</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Dimensions</dt>
+				<dd>3648 × 5472</dd>
+		  	</dl>
+			</div>
+		  </div>
 		</div>
-		<div class="card"> <a href="photographs/car-sunflare-tree-blue-sky.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1540145729190-f17f7abe74e6?auto=format&w=500&q=60" alt="Car, sunflare, tree and blue sky"></a>
-		</div>
-		<div class="card"> <a href="photographs/ocean-adventure-sunset-wave.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539578903083-0d9bb0ed39d4?auto=format&w=500&q=60" alt="Ocean, adventure, sunset and wave"></a>
-		</div>
-		<div class="card"> <a href="photographs/wine-over-water.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1537989660536-886ea4e55cdd?auto=format&w=500&q=60" alt="Wine over Water"></a>
-		</div>
-		<div class="card"> <a href="photographs/cat-eye-half-leopard-half-cat.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1537505099096-0dd319b285de?auto=format&w=500&q=60" alt="Cat Eye - Half Leopard, Half Cat"></a>
-		</div>
-		<div class="card"> <a href="photographs/sunglass-summer-relaxing-drink.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1530832963845-cd3dcb1c801d?auto=format&w=500&q=60" alt="Sunglass, summer, relaxing and drink"></a>
-		</div>
-		<div class="card"> <a href="photographs/pastel-hearts.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1530832805884-45f17d57a3d8?auto=format&w=500&q=60" alt="Pastel Hearts"></a>
-		</div>
-		<div class="card"> <a href="photographs/my-girls.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1517285976756-6447388e64f9?auto=format&w=500&q=60" 		alt="My Girls"></a>
-		</div>
-		<div class="card">
-			<img class="card-img-top" src="https://images.unsplash.com/photo-1510507450177-e7ee5f2a2c48?auto=format&w=500&q=60" alt="Working From Home">
-		</div>
-	</div>
+      </div> 
+      <div class="modal-footer">
+		<a href="https://unsplash.com/photos/jEnoPcftr7g" target="_blank">Photo Source</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>		
+<h2>Pastel Hearts</h2>
+	<p>Hearts and the color pink are two of my favorite things. This is why I love this photo and why it is so appealing to me.</p>
+<div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1530832805884-45f17d57a3d8?auto=format&w=1200&q=60" alt="Pastel Hearts">
+</div>
     <!-- InstanceEndEditable --></div>
   </div>
   
