Created Maddi Bazzocco Page and Detail Page 1

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="card-body">
       <h5 class="card-title">Maddi Bazzocco</h5>
       <p class="card-text">Whole foods. Self love. Active lifestyle. Camera in one hand, coffee in the other.</p>
-	  <a href="#">Photo Gallery</a>
+	  <a href="maddi-bazzocco/index.html">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
