--- a/maddi-bazzocco/index.html
+++ b/maddi-bazzocco/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/maddi-bazzocco-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -10,22 +10,21 @@
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Unsplash - Maddi Bazzocco</title>
 <!-- InstanceEndEditable -->
+    
     <!-- InstanceBeginEditable name="head" -->
-    <!-- TemplateBeginEditable name="head" -->
-    <!-- TemplateEndEditable -->
-<!-- InstanceEndEditable -->
+    <!-- InstanceEndEditable -->
+
 </head>
   <body>
 	<div class="container">
     	<h1>Unsplash Photographer Spotlight</h1>
-	<!-- InstanceBeginEditable name="master-content" -->
+	
 <nav>
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-    <!-- TemplateBeginEditable name="breadcrumb-trail" -->
+    <!-- InstanceBeginEditable name="breadcrumb-trail" -->
     <li class="breadcrumb-item active">Maddi Bazzocco</li>
-    <li class="breadcrumb-item active">Example Photo</li>
-    <!-- TemplateEndEditable -->
+    <!-- InstanceEndEditable -->
   </ol>
 </nav>
   <div class="row">
@@ -43,11 +42,33 @@
       </div>
     </div>
     <div class="col-12 col-sm-6 col-md-9">
-	<!-- TemplateBeginEditable name="maddi-bazzocco-content" -->
-      <p>[Placeholder content.]</p>
-    <!-- TemplateEndEditable --></div>
+	<!-- InstanceBeginEditable name="maddi-bazzocco-content" -->
+      <p>Maddi Bazzocco is a photographer from London. As someone who spent a semester abroad in London, I connected with her photos and her healthy, active lifestyle.</p>
+		<div class="card-columns">
+		<div class="card"> <a href="photographs/bentwood-breakfast.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543393786-6b9844cc148d" alt="Bentwood Breakfast"></a>
+  		</div>
+		<div class="card"> <a href="photographs/hd-photo-2.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543340666-a7d77fa7c60e?auto=format&w=500&q=60" alt="HD photo"></a>
+		</div>
+		<div class="card"> <a href="photographs/car-sunflare-tree-blue-sky.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1540145729190-f17f7abe74e6?auto=format&w=500&q=60" alt="Car, sunflare, tree and blue sky"></a>
+		</div>
+		<div class="card"> <a href="photographs/ocean-adventure-sunset-wave.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539578903083-0d9bb0ed39d4?auto=format&w=500&q=60" alt="Ocean, adventure, sunset and wave"></a>
+		</div>
+		<div class="card"> <a href="photographs/wine-over-water.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1537989660536-886ea4e55cdd?auto=format&w=500&q=60" alt="Wine over Water"></a>
+		</div>
+		<div class="card"> <a href="photographs/cat-eye-half-leopard-half-cat.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1537505099096-0dd319b285de?auto=format&w=500&q=60" alt="Cat Eye - Half Leopard, Half Cat"></a>
+		</div>
+		<div class="card"> <a href="photographs/sunglass-summer-relaxing-drink.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1530832963845-cd3dcb1c801d?auto=format&w=500&q=60" alt="Sunglass, summer, relaxing and drink"></a>
+		</div>
+		<div class="card"> <a href="photographs/pastel-hearts.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1530832805884-45f17d57a3d8?auto=format&w=500&q=60" alt="Pastel Hearts"></a>
+		</div>
+		<div class="card"> <a href="photographs/my-girls.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1517285976756-6447388e64f9?auto=format&w=500&q=60" 		alt="My Girls"></a>
+		</div>
+		<div class="card"> <a href="photographs/working-from-home.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510507450177-e7ee5f2a2c48?auto=format&w=500&q=60" alt="Working From Home"></a>
+		</div>
+	</div>
+    <!-- InstanceEndEditable --></div>
   </div>
-  <!-- InstanceEndEditable -->
+  
 	<div class="row">
 		<div class="col-12 col-sm-6">
 		Made with [love] and [coffee] by Ali Magnani
